--- a/todolist-front/package.json
+++ b/todolist-front/package.json
@@ -9,17 +9,16 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "cli-color": "latest",
-    "del": "latest",
-    "gulp": "latest",
-    "gulp-less": "latest",
-    "gulp-clean-css": "latest",
-    "gulp-plumber": "latest",
-    "typescript": "latest",
-    "gulp-typescript": "latest",
-    "gulp-sourcemaps": "latest",
-    "@types/jquery": "latest",
-    "@types/knockout": "latest",
-    "@types/jasmine": "latest"
+    "cli-color": "1.3.0",
+    "del": "3.0.0",
+    "gulp": "3.9.1",
+    "gulp-less": "4.0.1",
+    "gulp-clean-css": "3.10.0",
+    "gulp-plumber": "1.2.0",
+    "typescript": "3.1.3",
+    "gulp-typescript": "5.0.0-alpha.3",
+    "gulp-sourcemaps": "2.6.4",
+    "@types/knockout": "3.4.59",
+    "@types/jasmine": "2.8.9"
   }
 }
