--- a/todolist-back/src/main/resources/application.properties
+++ b/todolist-back/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/todolist_db
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist_db?useSSL=false
 spring.datasource.username=study
 spring.datasource.password=$s7Ty1%xx0#
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
